some chnages made

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
 
 
-                    <p class="x"><i class="fa fa-copyright"></i> 2020 by Rahul.B <br> Phone No-:9353240198<br>Mail ID: rahulanair2001@gmail.com</p>
+                    <p class="x"><i class="fa fa-copyright"></i> 2020 by Rahul.B <br> Phone No-:9353240198<br>Mail ID: rahulnair2001@gmail.com</p>
                 </div>
             </div>
 
