--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6">
-                    <img src="https://scontent.fblr4-2.fna.fbcdn.net/v/t1.6435-9/45509212_107880980218016_1978705396205879296_n.jpg?_nc_cat=111&ccb=1-3&_nc_sid=174925&_nc_ohc=YxCzxCw6_yEAX94pKQ6&_nc_ht=scontent.fblr4-2.fna&oh=c111dbd65b77e1db89138f7084a8e795&oe=608B5C2D"
+                    <img src="https://avatars.githubusercontent.com/u/69391478?s=400&u=c178234c902c4d63e03922d05cc3394e988b82f3&v=4"
                         alt="Rahul B" class="img-fluid rounded-corner" style="width:75%">
 
                 </div>
